--- a/main.html
+++ b/main.html
@@ -8,12 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="holder">
-		<div class="box">1</div>
-		<div class="box">2</div>
-		<div class="box">3</div>
-		<div class="box">4</div>
+	<div data-ns-attribute="block- inline-button">
+		<button>Test1</button>
+		<button>Test2</button>
+		Answer: Inline
 	</div>
+	<div data-ns-attribute="block-inline-div">
+		<div>Test1</div>
+		<div>Test2</div>
+		Answer: Block
+	</div>
+
+
     <script type="text/javascript" src="./script.js">
 </script>
 
