--- a/main.html
+++ b/main.html
@@ -31,12 +31,32 @@
 	<div data-ns-test="block-inline-input">
 		<input>Test1</input>
 		<input>Test2</input>
-		Answer: Block
+		Answer: Inline
 	</div>
 	<div data-ns-test="block-inline-cite">
 		<cite>Test1</cite>
 		<cite>Test2</cite>
 		Answer: Block
+	</div>
+	<div data-ns-test="block-inline-cite">
+		<code>Test1</code>
+		<code>Test2</code>
+		Answer: Block
+	</div>
+	<div data-ns-test="block-inline-h1">
+		<h1>Test1</h1>
+		<h1>Test2</h1>
+		Answer: Block
+	</div>
+	<div data-ns-test="block-inline-sup">
+		<sup>Test1</sup>
+		<sup>Test2</sup>
+		Answer: Inline
+	</div>
+	<div data-ns-test="block-inline-sub">
+		<sub>Test1</sub>
+		<sub>Test2</sub>
+		Answer: Inline
 	</div>
 
 
