--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
 		<cite>Test2</cite>
 		Answer: Block
 	</div>
-	<div data-ns-test="block-inline-cite">
+	<div data-ns-test="block-inline-code">
 		<code>Test1</code>
 		<code>Test2</code>
 		Answer: Block
