--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
 	<div data-ns-test="block-inline-code">
 		<code>Test1</code>
 		<code>Test2</code>
-		Answer: Block
+		Answer: Inline
 	</div>
 	<div data-ns-test="block-inline-h1">
 		<h1>Test1</h1>
